fixed overflow wrap?

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -185,6 +185,7 @@ input, select, textarea {
 		font-weight: 600;
 		/*line-height: 1.65;*/
 		margin: 0 0 1em 0;
+		overflow-wrap: normal;
 	}
 	h2, h3, h4, h5, h6 {
 		line-height: 1.65;
